# http-server

./: CMakeLists.txt  README.md
client/: client.cpp  client.h
common/: common.h  util.cpp  util.h
public/: 404NotFound.html  index.html  other.html
public/register/: users.txt
server/: connection.cpp  connection.h  httpHandler.cpp  httpHandler.h  httpParser.cpp  httpParser.h  httpRequest.cpp  httpRequest.h  httpResponse.cpp  httpResponse.h  server.cpp  server.h
wwwroot/: index.html
